@@ -1,15 +1,21 @@
-FROM gradle:jdk11 AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon && tar -xf /home/gradle/src/build/distributions/ForestDefense-app.tar -C /home/gradle/src/build/unzip
+FROM amazoncorretto:11
 
-FROM openjdk:8-jre-slim
+COPY . /build
+WORKDIR /build
+RUN apt-get update && apt-get upgrade && apt-get install -y \
+    pandoc  \
+  && rm -rf /var/lib/apt/lists/*
+RUN cd updater/ && ./build-docker.sh
+
+FROM amazoncorretto:11
 
 EXPOSE 27767
 
 RUN mkdir /app
 
-COPY --from=build /home/gradle/src/build/unzip/ForestDefense-app /app/
+COPY --from=build /build/updater/tmp/ForestDefense-app/* /app/
+COPY --from=build /build/updater/web/* /web2/
+COPY --from=build /build/updater/run-docker.sh /app
 
-#ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+
 ENTRYPOINT ["/app/bin/ForestDefense"]
